# jobtrackai

./: README.md  pyproject.toml
src/jobtrackai/: __init__.py  fairness.py  interview.py  main.py  matching.py  models.py  resume.py  skills.py  text_utils.py  webapp.py
tests/: test_interview_and_gaps.py  test_matching.py  test_webapp.py
