[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jobtrackai"
version = "0.1.0"
description = "Explainable career readiness and job matching engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110.0", "uvicorn>=0.27.0"]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
